tests/test-files/fundeps.txt
================================================================================
100 Unknown type variable
================================================================================

(package coalton-unit-test/fundeps)

(define-class (C :a :b (:a -> :c)))

--------------------------------------------------------------------------------

error: Unknown type variable
  --> test:3:30
   |
 3 |  (define-class (C :a :b (:a -> :c)))
   |                                ^^ unknown type variable :C

================================================================================
101 Trivially conflicting instances
================================================================================

(package coalton-unit-test/fundeps)

(define-class (C :a :b (:a -> :b)))

(define-instance (C Integer String))

(define-instance (C Integer Unit))

--------------------------------------------------------------------------------

error: Instance fundep conflict
  --> test:7:17
   |
 7 |  (define-instance (C Integer Unit))
   |                   ^^^^^^^^^^^^^^^^ instance conflicts previous instance C INTEGER STRING

================================================================================
102 Instances with unequal generality should conflict in either definition order
================================================================================

(package coalton-unit-test/fundeps)

(define-class (C :a :b (:a -> :b)))

(define-instance (C (List :a) String))

(define-instance (C (List Integer) Unit))

--------------------------------------------------------------------------------

error: Instance fundep conflict
  --> test:7:17
   |
 7 |  (define-instance (C (List Integer) Unit))
   |                   ^^^^^^^^^^^^^^^^^^^^^^^ instance conflicts previous instance C (LIST :A) STRING

================================================================================
103 Instances with unequal generality should conflict in either definition order
================================================================================

(package coalton-unit-test/fundeps)

(define-class (C :a :b (:a -> :b)))

(define-instance (C (List Integer) Unit))

(define-instance (C (List :a) String))

--------------------------------------------------------------------------------

error: Instance fundep conflict
  --> test:7:17
   |
 7 |  (define-instance (C (List :a) String))
   |                   ^^^^^^^^^^^^^^^^^^^^ instance conflicts previous instance C (LIST INTEGER) UNIT

================================================================================
104 Fundeps improve type checking
================================================================================

(package coalton-unit-test/fundeps)

(define-class (C :a :b)
  (m (:a -> :b)))

(define-instance (C String Integer)
  (define (m x) 5))

(define (ambig _x) Unit)

(define x (ambig (m \"hello\")))

--------------------------------------------------------------------------------

error: Unknown variable "HELLO"
  --> test:11:20
    |
 11 |  (define x (ambig (m \"hello\")))
    |                      ^^^^^^^^^ unknown variable "HELLO"

================================================================================
105 Ambiguous despite fundep
================================================================================

(package coalton-unit-test/fundeps)

(define-class (C :a :b (:a -> :b))
(m :b))

--------------------------------------------------------------------------------

error: Ambiguous method
  --> test:4:0
   |
 4 |  (m :b))
   |  ^^^^^^ the method is ambiguous

================================================================================
106 Ambiguous without fundep
================================================================================

(package coalton-unit-test/fundeps)

(define-class (C :a :b)
  (m :a))

--------------------------------------------------------------------------------

error: Ambiguous method
  --> test:4:2
   |
 4 |    (m :a))
   |    ^^^^^^ the method is ambiguous

================================================================================
107 Instance fundep ambiguity
================================================================================

(package coalton-unit-test/fundeps)

(define-class (C :a :b (:a -> :b)))
(define-instance (C :a :b))

--------------------------------------------------------------------------------

error: Instance fundep ambiguity
  --> test:4:17
   |
 4 |  (define-instance (C :a :b))
   |                   ^^^^^^^^^ dependent types cannot contain types variables that are not present in the corresponding determinant types.

================================================================================
108 Declared context is too general
================================================================================

(package coalton-unit-test/fundeps)

(define-class (C :a :b (:a -> :b))
  (cm :a))
(define-class (C :a :b => D :a :b)
  (dm (:a -> :a)))

(declare f ((C :a :b) (D :a :c) => :a))
(define f (dm cm))

--------------------------------------------------------------------------------

error: Declared context is too general
  --> test:8:11
   |
 8 |  (declare f ((C :a :b) (D :a :c) => :a))
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the substitution :A +-> :B is determined for (C :C :A) (D :C :B) => :C by functional dependencies.

================================================================================
109 Declared context can be reduced
================================================================================

(package coalton-unit-test/fundeps)

(define-class (C :a :b (:a -> :b))
  (cm :a))
(define-class (C :a :b => D :a :b)
  (dm (:a -> :a)))

(declare f ((C :a :b) (D :a :b) => :a))
(define f (dm cm))

--------------------------------------------------------------------------------

warn: Declared context can be reduced
  --> test:8:11
   |
 8 |  (declare f ((C :a :b) (D :a :b) => :a))
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ qualified type can be reduced to D :A :B => :A

================================================================================
110 Context conflicts with functional dependencies
================================================================================

(package coalton-unit-test/fundeps)

(define-class (C :a :b (:a -> :b))
  (cm :a))
(define-class (C :a :b => D :a :b)
  (dm (:a -> :a)))

(declare f ((C :a String) (D :a Integer) => :a))
(define f (dm cm))

--------------------------------------------------------------------------------

error: Context conflicts with functional dependencies
  --> test:8:11
   |
 8 |  (declare f ((C :a String) (D :a Integer) => :a))
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the predicates C :A STRING and C :A INTEGER conflict with functional dependencies
